2013-02-22  Eli Zaretskii  <eliz@gnu.org>

	* info/pcterm.c (pc_initialize_terminal): Move prototype outside
	of w32_info_init to the file level.
	bug-texinfo, 19 Feb 2013 19:40:48.

2013-02-22  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Parser.pm: better handling of comments in @-commands
	with line specially handled (@set, @ifset, @unmacro...).
	Accept @set and @clear almost everywhere.
	Accept that @set and @clear are not at the beginning of a line.
	Do not warn for @end in style command, as it may be the @end of
	a conditional that is correct in that context.

2013-02-21  Karl Berry  <karl@gnu.org>

	* NEWS: mention incompatibilities of text outside @item
	and irregular sectioning trees.

2013-02-20  Patrice Dumas  <pertusus@free.fr>

	* Makeinfo.am, texi2html/test/*/Makefile.am, tp/tests/*/Makefile.am,
	tp/maintain/regenerate_file_lists.pl, tp/tests/many_input_files/*.sh,
	tp/tests/run_parser_all.sh, texi2html/test/run_*.sh, 
	texi2html/test/many_input_files/*.sh: adapt for SVN.
	* tp/MANIFEST: regenerate.
	* tp/Texinfo/Structuring.pm: lowering a section level is only a 
	warning.

2013-02-18  Karl Berry  <karl@gnu.org>  (tiny change)

	* info/info-utils (va_copy) [__hpux]: define for HP-UX,
	From Richard Lloyd, 18 Feb 2013 11:52:10.
	* system.h (TEXINFO_PRINTFLIKE) [! __GNUC__]: define to nothing.

2013-02-17  Karl Berry  <karl@gnu.org>

	* doc/refcard/txirefcard.tex: reduce to four pages again
	(by regretfully removing the Emacs section).

2013-02-16  Karl Berry  <karl@gnu.org>

	* Version 5.0.
	
	* doc/texinfo.txi: remove zyx placeholder.

2013-02-13  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/window.c (window_make_window): Initialize allocated
	memory.
	(string_to_node): Likewise.
	* info/filesys.c (filesys_read_info_file): Always terminate
	the contents with 0.
	Fix 700354@bugs.debian.org.

2013-02-12  Karl Berry  <karl@gnu.org>

	* pretest 4.13.97.

2013-02-10  Karl Berry  <karl@gnu.org>
